--- a/src/03-Biomarker-Evaluation.Rmd
+++ b/src/03-Biomarker-Evaluation.Rmd
@@ -13,7 +13,7 @@ integrate_analysis(SE=MEL_GSE91061, geneSet="CD274")
 ```
 
 ## Differential analysis
- You can use **diff_biomk()** to visualize differential analysis result between Pre-Treatment and Post-Treatment patients or Responders and Non-Responders in specified gene.
+ You can use **diff_biomk()** to visualize differential analysis result between Pre-Treatment and Post-Treatment patients or Responders and Non-Responders in a specified gene or gene set.
 
 ***Pre-Treatment vs Post-Treatment***
 
@@ -86,10 +86,10 @@ sig_res
 </div>
  Columns represent signatures and rows represent sample.
 
-## Assess the Performance of Signature
+## Assess the performance of signature
 
  By employing the **roc_biomk()** function, you can assess the performance of built-in and custom signatures in different datasets.
- The function will generate a roc object and a curve to assess the predictive performance. (33 controls and 40 cases means 33 Non-Responder and 44 Responder are included in this analysis)
+ The function will generate a roc object and a curve to assess the predictive performance. 
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
 sig_roc <- 
@@ -98,5 +98,13 @@ roc_biomk(MEL_PRJEB23709,
           method = "Weighted_mean",
           rmBE=TRUE,
           response_NR=TRUE)
-sig_roc
+```
+
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+sig_roc[[1]]
+```
+ 33 observed non-responders and 40 observed responders are included in this analysis
+ 
+```{r echo=TRUE, message=FALSE, warning=FALSE}
+sig_roc[[2]]
 ```
